Images bug fixed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="score-panel" id="scorePanel">
         <div class="top-bar">
           <button class="home-btn" id="homeBtn">
-            <img src="/images/House.png" alt="Home" />
+            <img src="./sprites/House.png" alt="Home" />
           </button>
 
           <div class="highscore">
