Miss Mole Panel added

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
         <button id="startBtn">Start</button>
       </div>
 
+      <!-- Missed Mole Panel -->
+      <div id="missPanel">
+        <div class="miss-content">
+          <div id="missMessage" class="miss-text">You missed a mole. 3 lives left</div>
+          <button id="resumeBtn" class="miss-btn">Resume</button>
+        </div>
+      </div>
+
       <!-- Score Panel -->
       <div class="score-panel" id="scorePanel">
         <div class="top-bar">
           <button class="home-btn" id="homeBtn">
-            <img src="./sprites/House.png" alt="Home" />
+            <img src="sprites/House.png" alt="Home" />
           </button>
 
           <div class="highscore">
